Trying to fix footer spacing

--- a/less/index.less
+++ b/less/index.less
@@ -161,7 +161,7 @@ html, body {
 
 		nav {
 			display: flex;
-			align-items: space-around;
+			align-items: space-between;
 
 			a {
 				text-decoration: none;
